--- a/terms.html
+++ b/terms.html
@@ -1,47 +1,132 @@
-# GUILD-BOT Terms of Service  
-**Effective Date:** September 8, 2025  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service - GUILD-BOT</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #2f3136;
+            color: #ffffff;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            color: #7289da;
+        }
+        h1 {
+            text-align: center;
+            border-bottom: 3px solid #7289da;
+            padding-bottom: 10px;
+        }
+        h2 {
+            margin-top: 30px;
+            border-left: 4px solid #7289da;
+            padding-left: 15px;
+        }
+        .effective-date {
+            text-align: center;
+            font-weight: bold;
+            color: #99aab5;
+            margin-bottom: 40px;
+        }
+        .back-link {
+            color: #7289da;
+            text-decoration: none;
+            margin-bottom: 20px;
+            display: inline-block;
+        }
+        .back-link:hover {
+            text-decoration: underline;
+        }
+        strong {
+            color: #7289da;
+        }
+        a {
+            color: #7289da;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .separator {
+            border: none;
+            height: 2px;
+            background: #99aab5;
+            margin: 30px 0;
+            opacity: 0.3;
+        }
+        .contact-info {
+            background-color: #36393f;
+            padding: 20px;
+            border-radius: 8px;
+            border-left: 4px solid #7289da;
+        }
+        .contact-info ul {
+            list-style: none;
+            padding: 0;
+        }
+        .contact-info li {
+            margin: 10px 0;
+            font-size: 16px;
+        }
+    </style>
+</head>
+<body>
+    <a href="index.html" class="back-link">← Back to Home</a>
+    
+    <h1>GUILD-BOT Terms of Service</h1>
+    <p class="effective-date">Effective Date: September 8, 2025</p>
 
----
+    <hr class="separator">
 
-## 1. Acceptance of Terms  
-By using **GUILD-BOT** (“the Bot”), you agree to these Terms of Service.  
-If you do not agree, you should not use the Bot.  
+    <h2>1. Acceptance of Terms</h2>
+    <p>By using <strong>GUILD-BOT</strong> ("the Bot"), you agree to these Terms of Service.<br>
+    If you do not agree, you should not use the Bot.</p>
 
----
+    <hr class="separator">
 
-## 2. Description of Service  
-**GUILD-BOT** is a free Discord bot designed to help users manage and organize tags and server links.  
-The Bot is offered **“as is”**, with no guarantees or warranties of any kind.  
+    <h2>2. Description of Service</h2>
+    <p><strong>GUILD-BOT</strong> is a free Discord bot designed to help users manage and organize tags and server links.<br>
+    The Bot is offered <strong>"as is"</strong>, with no guarantees or warranties of any kind.</p>
 
----
+    <hr class="separator">
 
-## 3. User Responsibilities  
-Users must follow **Discord’s Terms of Service** and **Community Guidelines**.  
-Any misuse of the Bot may result in access being revoked without prior notice.  
+    <h2>3. User Responsibilities</h2>
+    <p>Users must follow <strong>Discord's Terms of Service</strong> and <strong>Community Guidelines</strong>.<br>
+    Any misuse of the Bot may result in access being revoked without prior notice.</p>
 
----
+    <hr class="separator">
 
-## 4. Data Collection  
-We only collect basic information such as **Discord user IDs** (and server IDs where needed).  
-This data is used to handle first-time user notifications and provide tag features.  
-For details, see our privacy policy**.  
+    <h2>4. Data Collection</h2>
+    <p>We only collect basic information such as <strong>Discord user IDs</strong> (and server IDs where needed).<br>
+    This data is used to handle first-time user notifications and provide tag features.<br>
+    For details, see our <strong><a href="privacy.html">Privacy Policy</a></strong>.</p>
 
----
+    <hr class="separator">
 
-## 5. Modifications and Termination  
-We may update, alter, or shut down the Bot at any time without warning.  
-We are not responsible for any losses or damages caused by such updates or downtime.  
+    <h2>5. Modifications and Termination</h2>
+    <p>We may update, alter, or shut down the Bot at any time without warning.<br>
+    We are not responsible for any losses or damages caused by such updates or downtime.</p>
 
----
+    <hr class="separator">
 
-## 6. Limitation of Liability  
-The Bot is provided **“as is”** without any type of warranty.  
-We are not liable for direct, indirect, or incidental damages that may result from using the Bot.  
+    <h2>6. Limitation of Liability</h2>
+    <p>The Bot is provided <strong>"as is"</strong> without any type of warranty.<br>
+    We are not liable for direct, indirect, or incidental damages that may result from using the Bot.</p>
 
----
+    <hr class="separator">
 
-## 7. Contact  
-For questions about these Terms, you can contact us at:  
-
-- 📧 Email: **altone733@gmail.com**  
-- 💬 Discord: [Support Server](https://discord.gg/aQhR9fr2mV)
+    <h2>7. Contact</h2>
+    <p>For questions about these Terms, you can contact us at:</p>
+    <div class="contact-info">
+        <ul>
+            <li>📧 Email: <strong>altone733@gmail.com</strong></li>
+            <li>💬 Discord: <a href="https://discord.gg/aQhR9fr2mV">Support Server</a></li>
+        </ul>
+    </div>
+</body>
+  </html>
