--- a/privacy.html
+++ b/privacy.html
@@ -1,54 +1,156 @@
-# GUILD-BOT Privacy Policy  
-**Effective Date:** September 8, 2025  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - GUILD-BOT</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #2f3136;
+            color: #ffffff;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            color: #7289da;
+        }
+        h1 {
+            text-align: center;
+            border-bottom: 3px solid #7289da;
+            padding-bottom: 10px;
+        }
+        h2 {
+            margin-top: 30px;
+            border-left: 4px solid #7289da;
+            padding-left: 15px;
+        }
+        .effective-date {
+            text-align: center;
+            font-weight: bold;
+            color: #99aab5;
+            margin-bottom: 40px;
+        }
+        .back-link {
+            color: #7289da;
+            text-decoration: none;
+            margin-bottom: 20px;
+            display: inline-block;
+        }
+        .back-link:hover {
+            text-decoration: underline;
+        }
+        strong {
+            color: #7289da;
+        }
+        a {
+            color: #7289da;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .separator {
+            border: none;
+            height: 2px;
+            background: #99aab5;
+            margin: 30px 0;
+            opacity: 0.3;
+        }
+        .contact-info {
+            background-color: #36393f;
+            padding: 20px;
+            border-radius: 8px;
+            border-left: 4px solid #7289da;
+        }
+        .contact-info ul {
+            list-style: none;
+            padding: 0;
+        }
+        .contact-info li {
+            margin: 10px 0;
+            font-size: 16px;
+        }
+        .important-note {
+            background-color: #36393f;
+            padding: 15px;
+            border-radius: 8px;
+            border-left: 4px solid #faa61a;
+            margin: 20px 0;
+        }
+        .important-note ul {
+            margin: 10px 0;
+            padding-left: 20px;
+        }
+        .important-note li {
+            margin: 5px 0;
+        }
+    </style>
+</head>
+<body>
+    <a href="index.html" class="back-link">← Back to Home</a>
+    
+    <h1>GUILD-BOT Privacy Policy</h1>
+    <p class="effective-date">Effective Date: September 8, 2025</p>
 
----
+    <hr class="separator">
 
-## 1. Information We Collect  
-**GUILD-BOT** stores your **Discord User ID** only for the purpose of tracking whether you have already seen the initial notice.  
-This ensures you don’t repeatedly see the same prompt and improves your experience.  
+    <h2>1. Information We Collect</h2>
+    <p><strong>GUILD-BOT</strong> stores your <strong>Discord User ID</strong> only for the purpose of tracking whether you have already seen the initial notice.<br>
+    This ensures you don't repeatedly see the same prompt and improves your experience.</p>
 
----
+    <hr class="separator">
 
-## 2. How We Use Your Information  
-Your Discord ID is used **exclusively** for managing the first-time notice system.  
-We do **not** collect, log, or process any other personal information.  
+    <h2>2. How We Use Your Information</h2>
+    <p>Your Discord ID is used <strong>exclusively</strong> for managing the first-time notice system.<br>
+    We do <strong>not</strong> collect, log, or process any other personal information.</p>
 
----
+    <hr class="separator">
 
-## 3. Data Sharing  
-**GUILD-BOT** does **not** sell, share, or disclose your information to any third parties.  
+    <h2>3. Data Sharing</h2>
+    <p><strong>GUILD-BOT</strong> does <strong>not</strong> sell, share, or disclose your information to any third parties.</p>
 
----
+    <hr class="separator">
 
-## 4. Cookies and Tracking  
-The Bot does **not** use cookies, analytics tools, or other tracking technologies.  
+    <h2>4. Cookies and Tracking</h2>
+    <p>The Bot does <strong>not</strong> use cookies, analytics tools, or other tracking technologies.</p>
 
----
+    <hr class="separator">
 
-## 5. Data Deletion and Access  
-Because we only keep your Discord ID temporarily for user notice functionality, and no other personal data is stored,  
-there is no need for data deletion or export requests.  
-If you have concerns, you may still reach out to us.  
+    <h2>5. Data Deletion and Access</h2>
+    <p>Because we only keep your Discord ID temporarily for user notice functionality, and no other personal data is stored,<br>
+    there is no need for data deletion or export requests.<br>
+    If you have concerns, you may still reach out to us.</p>
 
----
+    <hr class="separator">
 
-## 6. Paid Services  
-**GUILD-BOT** is a free service and does not provide paid features or subscriptions.  
+    <h2>6. Paid Services</h2>
+    <p><strong>GUILD-BOT</strong> is a free service and does not provide paid features or subscriptions.</p>
 
----
+    <hr class="separator">
 
-## 7. Contact Us  
-If you have any questions about this Privacy Policy, you can contact us at:  
+    <h2>7. Contact Us</h2>
+    <p>If you have any questions about this Privacy Policy, you can contact us at:</p>
+    <div class="contact-info">
+        <ul>
+            <li>📧 Email: <strong>altone733@gmail.com</strong></li>
+            <li>💬 Discord: <a href="https://discord.gg/aQhR9fr2mV">Support Server</a></li>
+        </ul>
+    </div>
 
-- 📧 Email: **altone733@gmail.com**  
-- 💬 Discord: [Support Server](https://discord.gg/aQhR9fr2mV)  
+    <hr class="separator">
 
----
-
-## 8. Message Content Usage  
-During the **server onboarding process**, **GUILD-BOT** may briefly scan **public message content** to detect metadata such as server tags or invite links.  
-- This only happens in public channels like `#tag` or `#info`.  
-- No message content is stored, logged, or shared.  
-- This process is optional and can be disabled by the server owner at any time.  
-
----
+    <h2>8. Message Content Usage</h2>
+    <p>During the <strong>server onboarding process</strong>, <strong>GUILD-BOT</strong> may briefly scan <strong>public message content</strong> to detect metadata such as server tags or invite links.</p>
+    
+    <div class="important-note">
+        <ul>
+            <li>This only happens in public channels like <strong>#tag</strong> or <strong>#info</strong>.</li>
+            <li>No message content is stored, logged, or shared.</li>
+            <li>This process is optional and can be disabled by the server owner at any time.</li>
+        </ul>
+    </div>
+</body>
+</html>
